--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -29,8 +29,20 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-page="/Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Privacy">Privacy</a>
+                        <li class="nav-item dropdown" >
+                            <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown">
+                                Admin
+                            </a>
+                       
+                            <div class="dropdown-menu bg-primary text-white">
+                                <a class="dropdown-item" asp-area="" asp-page="/Admin/Category/Index">Category</a>
+                                <hr>
+                                <a class="dropdown-item text-white" asp-area="" asp-page="/Admin/FoodType/Index">Food Type</a>
+                                <hr>
+                                <a class="dropdown-item text-white" asp-area="" asp-page="/Admin/MenuItem/Index">Menu Item</a>
+                                <hr>
+                                <a class="dropdown-item text-white" asp-area="" asp-page="/Admin/User/Index">Users</a>
+                            </div>
                         </li>
                     </ul>
                 </div>
