--- a/Pages/Admin/Category/Index.cshtml
+++ b/Pages/Admin/Category/Index.cshtml
@@ -2,10 +2,10 @@
 @model Taste.Pages.Admin.Category.IndexModel
 
 
-    <div class="border backgroundWhote container">
+    <div class="border backgroundWhite container">
         <div class="row">
             <div class="col-6">
-                <h2 class="text-primary"> Categoy List</h2>
+                <h2 class="text-primary"> Category List</h2>
 
             </div>
             <div class="col-6 text-right">
