--- a/Pages/Admin/Category/Upsert.cshtml
+++ b/Pages/Admin/Category/Upsert.cshtml
@@ -1,67 +1,68 @@
 ﻿@page
+@using Microsoft.EntityFrameworkCore
 @model Taste.Pages.Admin.Category.UpsertModel
 
-    <form method="post" asp-action="Upsert">
-        <div class="container">
-            <div class="row px-2 mx-2 backgroundWhite border">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="col-12 px-3" style="border-bottom: 1px solid #325d88">
-                    <h2 class="text-primary">Category</h2>
+<form method="post" asp-action="Upsert">
+    <div class="container">
+        <div class="row px-2 mx-2 backgroundWhite border">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @if (Model.CategoryObj.Id != 0)
+            {
+                <input type="hidden" asp-for="CategoryObj.Id" />
+            }
 
-                </div>
-                <div class="col-8 pt-3">
-                    <div class="form-group row">
-                        <div class="col-3">
-                            <label asp-for="CategoryObj.Name"></label>
-                        </div>
-                        <div class="col-9">
-                            <input class="form-control" asp-for="CategoryObj.Name" />
-                            <span class="text-danger" asp-validation-for="CategoryObj.Name"></span>
-                        </div>
-                    </div>
 
-                    <div class="form-group row">
-                        <div class="col-3">
-                            <label asp-for="CategoryObj.DisplayOrder"></label>
-                        </div>
-                        <div class="col-9">
-                            <input class="form-control" asp-for="CategoryObj.DisplayOrder" />
-                            <span class="text-danger" asp-validation-for="CategoryObj.DisplayOrder"></span>
-                        </div>
-                    </div>
+            <div class="col-12 px-3" style="border-bottom: 1px solid #325d88">
+                <h2 class="text-primary">Category</h2>
 
-                </div>
             </div>
-            <div class="form-group row">
-                
-                <div class="col-9 offset-3">
-                    <div class="row">
-                        <div class="col-6">
-                            @if (Model.CategoryObj.Id != 0)
-                            {
-                                <button type="submit" class="btn btn-primary form-control">
-                                    Update
-                                </button>
-                            }
-                            else
-                            {
-                                <button type="submit" class="btn btn-primary form-control">
-                                    Create
-                                </button>
-                            }
+            <div class="col-8 pt-3">
+                <div class="form-group row">
+                    <div class="col-3">
+                        <label asp-for="CategoryObj.Name"></label>
+                    </div>
+                    <div class="col-9">
+                        <input class="form-control" asp-for="CategoryObj.Name" />
+                        <span class="text-danger" asp-validation-for="CategoryObj.Name"></span>
+                    </div>
+                </div>
 
-                        </div>
-                        <div class="col-6">
-                            <a asp-page="./Index" class="btn btn-success form-control">
-                                Back to list
-                            </a>
-                            
-                            
-                        </div>
+                <div class="form-group row">
+                    <div class="col-3">
+                        <label asp-for="CategoryObj.DisplayOrder"></label>
+                    </div>
+                    <div class="col-9">
+                        <input class="form-control" asp-for="CategoryObj.DisplayOrder" />
+                        <span class="text-danger" asp-validation-for="CategoryObj.DisplayOrder"></span>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="form-group row">
+
+            <div class="col-9 offset-3">
+                <div class="row">
+                    <div class="col-6">
+
+                        <button type="submit" class="btn btn-primary form-control">
+                            @(Model.CategoryObj.Id !=0 ? "Update" : "Create")
+
+                        </button>
+
+
+                    </div>
+                    <div class="col-6">
+                        <a asp-page="./Index" class="btn btn-success form-control">
+                            Back to list
+                        </a>
+
+
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-    </form>
+</form>
 
