--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Taste</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" />
         
@@ -34,14 +34,14 @@
                                 Admin
                             </a>
                        
-                            <div class="dropdown-menu bg-primary text-white">
+                            <div class="dropdown-menu bg-primary " >
                                 <a class="dropdown-item" asp-area="" asp-page="/Admin/Category/Index">Category</a>
                                 <hr>
-                                <a class="dropdown-item text-white" asp-area="" asp-page="/Admin/FoodType/Index">Food Type</a>
+                                <a class="dropdown-item" asp-area="" asp-page="/Admin/FoodType/Index">Food Type</a>
                                 <hr>
-                                <a class="dropdown-item text-white" asp-area="" asp-page="/Admin/MenuItem/Index">Menu Item</a>
+                                <a class="dropdown-item" asp-area="" asp-page="/Admin/MenuItem/Index">Menu Item</a>
                                 <hr>
-                                <a class="dropdown-item text-white" asp-area="" asp-page="/Admin/User/Index">Users</a>
+                                <a class="dropdown-item" asp-area="" asp-page="/Admin/User/Index">Users</a>
                             </div>
                         </li>
                     </ul>
