modiy index and kayout

--- a/Taste/Pages/Shared/_Layout.cshtml
+++ b/Taste/Pages/Shared/_Layout.cshtml
@@ -32,13 +32,13 @@
                                 Admin
                             </a>
 
-                            <div class="dropdown-menu bg-primary ">
-                                <a class="dropdown-item" asp-area="" asp-page="/Admin/Category/Index">Category</a>
-                                <hr>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item " asp-area="" asp-page="/Admin/Category/Index">Category</a>
+                                
                                 <a class="dropdown-item" asp-area="" asp-page="/Admin/FoodType/Index">Food Type</a>
-                                <hr>
+                              
                                 <a class="dropdown-item" asp-area="" asp-page="/Admin/MenuItem/Index">Menu Item</a>
-                                <hr>
+                               
                                 <a class="dropdown-item" asp-area="" asp-page="/Admin/User/Index">Users</a>
                             </div>
                         </li>
