--- a/Taste/Pages/Admin/FoodType/Index.cshtml
+++ b/Taste/Pages/Admin/FoodType/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="border backgroundWhite container">
     <div class="row">
         <div class="col-6">
-            <h2 class="text-primary">Category List</h2>
+            <h2 class="text-primary">Food Type</h2>
 
         </div>
         <div class="col-6 text-right">
@@ -20,7 +20,7 @@
     <table id="DT_load" class="table table-striped table-bordered" style="width: 100%">
         <thead>
         <tr>
-            <th>Category Name</th>
+            <th>Food Type</th>
             <th>
 
             </th>
