--- a/Taste/Pages/Admin/MenuItem/Index.cshtml
+++ b/Taste/Pages/Admin/MenuItem/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
-@model Taste.Pages.Admin.Category.IndexModel
+@model Taste.Pages.Admin.MenuItem.IndexModel
 
 
 <div class="border backgroundWhite container">
     <div class="row">
         <div class="col-6">
-            <h2 class="text-primary">Category List</h2>
+            <h2 class="text-primary">Menu Item</h2>
 
         </div>
         <div class="col-6 text-right">
@@ -15,11 +15,14 @@
         </div>
     </div>
     <br><br>
+
     <table id="DT_load" class="table table-striped table-bordered" style="width: 100%">
         <thead>
             <tr>
-                <th>Category Name</th>
-                <th>Display Order</th>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Category</th>
+                <th>FoodType</th>
                 <th>
 
                 </th>
@@ -29,7 +32,7 @@
 </div>
 
 @section Scripts{
-    <script src="~/js/category.js">
+    <script src="~/js/menuItem.js">
 
     </script>
 
