--- a/Taste/Pages/Admin/FoodType/Upsert.cshtml
+++ b/Taste/Pages/Admin/FoodType/Upsert.cshtml
@@ -12,7 +12,7 @@
             }
 
             <div class="col-12 px-3" style="border-bottom: 1px solid #325d88">
-                <h2 class="text-primary">@(Model.FoodTypeObj.Id!=0 ? "Update" : "Create") Category</h2>
+                <h2 class="text-primary">@(Model.FoodTypeObj.Id!=0 ? "Update" : "Create") Food Type</h2>
 
             </div>
             <div class="col-8 pt-3">
