--- a/Taste/Pages/Shared/_Layout.cshtml
+++ b/Taste/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.10.0/jquery.timepicker.css" />
 
 </head>
-<body>
+<body class=" search-background">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-primary border-bottom box-shadow mb-3">
             <div class="container">
