Added Name and contact  model  in register  cs

--- a/Taste/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Taste/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,6 +6,10 @@
 
 <h1>@ViewData["Title"]</h1>
 
+@*This is the new design of register form*@
+
+
+
 <div class="row">
     <div class="col-md-4">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
