--- a/Taste/Pages/Shared/_Layout.cshtml
+++ b/Taste/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Taste.Utility
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -27,21 +28,25 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-page="/Index">Home</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown">
-                                Admin
-                            </a>
+                        @if (User.IsInRole(SD.ManagerRole))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown">
+                                    Admin
+                                </a>
 
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item " asp-area="" asp-page="/Admin/Category/Index">Category</a>
-                                
-                                <a class="dropdown-item" asp-area="" asp-page="/Admin/FoodType/Index">Food Type</a>
-                              
-                                <a class="dropdown-item" asp-area="" asp-page="/Admin/MenuItem/Index">Menu Item</a>
-                               
-                                <a class="dropdown-item" asp-area="" asp-page="/Admin/User/Index">Users</a>
-                            </div>
-                        </li>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item " asp-area="" asp-page="/Admin/Category/Index">Category</a>
+
+                                    <a class="dropdown-item" asp-area="" asp-page="/Admin/FoodType/Index">Food Type</a>
+
+                                    <a class="dropdown-item" asp-area="" asp-page="/Admin/MenuItem/Index">Menu Item</a>
+
+                                    <a class="dropdown-item" asp-area="" asp-page="/Admin/User/Index">Users</a>
+                                </div>
+
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
