--- a/Taste/Pages/Customer/Home/Details.cshtml
+++ b/Taste/Pages/Customer/Home/Details.cshtml
@@ -26,7 +26,7 @@
                                         <span class="badge badge-dark">@Model.ShoppingCartObj.MenuItem.FoodType.Name</span>
                                         <h3 class="text-success"></h3>
 
-                                        <p class="text-secondary">@Html.Raw(Model.ShoppingCartObj.MenuItem)</p>
+                                        <p class="text-secondary">@Html.Raw(Model.ShoppingCartObj.MenuItem.Description)</p>
 
                                         <div class="row py-4">
                                             <div class="col-2"><label asp-for="ShoppingCartObj.Count" class="h3"></label></div>
