--- a/Taste/Pages/Shared/_Layout.cshtml
+++ b/Taste/Pages/Shared/_Layout.cshtml
@@ -47,6 +47,12 @@
 
                             </li>
                         }
+                        <li>
+                            <a href="#" class="nav-link text-white-50">
+                                <i class="fas fa-shopping-cart"></i>&nbsp;(0)
+                            </a>
+
+                        </li>
                     </ul>
                 </div>
             </div>
