--- a/Taste/Pages/Customer/Home/Details.cshtml
+++ b/Taste/Pages/Customer/Home/Details.cshtml
@@ -5,6 +5,8 @@
 
 <div class="">
     <form method="post">
+        <<input type="hidden" asp-for="ShoppingCartObj.MenuItemId" />
+        <div asp-validation-summary="ModelOnly" class="text-danger" ></div>
         <div class="container backgroundWhite">
             <div class="card">
                 <div class="card-header bg-light text-light ml-0 row container">
@@ -30,7 +32,7 @@
 
                                         <div class="row py-4">
                                             <div class="col-2"><label asp-for="ShoppingCartObj.Count" class="h3"></label></div>
-                                            <div class="col-10"> <input type="text" asp-for="ShoppingCartObj.Count" class="form-control rounded" height="40px;"/> </div>
+                                            <div class="col-10"> <input type="text" asp-for="ShoppingCartObj.Count" class="form-control rounded" height="40px;" /> </div>
                                             <span asp-validation-for="ShoppingCartObj.Count" class="text-danger"></span>
                                         </div>
                                     </div>
@@ -48,10 +50,10 @@
                 <div class="card-footer">
                     <div class="row">
                         <div class="col-12 col-md-6 pb-1 ">
-                            <a asp-page="Index" class="btn btn-success btn-square form-control btn-lg" style="height:50px;">Back to List</a>
+                            <a asp-page="Index" class="btn btn-success btn-square form-control btn-lg" style="height: 50px;">Back to List</a>
                         </div>
                         <div class="col-12 col-md-6 ">
-                            <button type="submit" class="btn btn-primary btn-square form-control btn-lg" style="height:50px;">Add to Cart</button>
+                            <button type="submit" class="btn btn-primary btn-square form-control btn-lg" style="height: 50px;">Add to Cart</button>
                         </div>
                     </div>
                 </div>
@@ -59,3 +61,8 @@
         </div>
     </form>
 </div>
+
+@section Scripts
+{
+    <partial name="Shared/_ValidationScriptsPartial"/>
+}
