--- a/Taste/Pages/Shared/_Layout.cshtml
+++ b/Taste/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
 ﻿@using Taste.Utility
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -47,12 +51,27 @@
 
                             </li>
                         }
-                        <li>
-                            <a href="#" class="nav-link text-white-50">
-                                <i class="fas fa-shopping-cart"></i>&nbsp;(0)
-                            </a>
+                        @if ((HttpContextAccessor.HttpContext.Session.GetInt32(SD.ShoppingCart)!=null))
+                        {
+                            <li>
+                                <a href="#" class="nav-link text-white-50">
+                                    @{
+                                        var count = HttpContextAccessor.HttpContext.Session.GetInt32(SD.ShoppingCart);
+                                    }
+                                    <i class="fas fa-shopping-cart"></i>&nbsp;(@count)
+                                </a>
 
-                        </li>
+                            </li>
+                        }
+                        else
+                        {
+                            <li>
+                                <a href="#" class="nav-link text-white-50">
+                                    <i class="fas fa-shopping-cart"></i>&nbsp;(0)
+                                </a>
+
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
