--- a/Taste/Pages/Customer/Cart/Index.cshtml
+++ b/Taste/Pages/Customer/Cart/Index.cshtml
@@ -66,7 +66,7 @@
                             <ul class="list-group">
                                 <li class="list-group-item d-flex justify-content-between bg-light">
                                     <span class="text-info"> Total (Php)</span>
-                                    <strong class="text-info">Php <span id="txtOrderTotal">@Model.OrderDetailsCartVM.OrderHeader.OrderTotal</span></strong>
+                                    <strong class="text-info">Php <span id="txtOrderTotal">@Model.OrderDetailsCartVM.OrderHeader.OrderTotal.ToString("0.00")</span></strong>
                                 </li>
                             </ul>
                         </div>
