--- a/Taste/Pages/Customer/Cart/Summary.cshtml
+++ b/Taste/Pages/Customer/Cart/Summary.cshtml
@@ -100,7 +100,7 @@
                     <div class="card-footer">
                         <div class="row">
                             <div class="col-12 col-md-4 offset-md-8">
-                                <button type="submit" value="Place Order" class="btn btn-success form-control">Place Order</button>
+                                <button type="submit" id="btnPlaceOrder" onclick="return validateInput()" value="Place Order" class="btn btn-success form-control">Place Order</button>
                             </div>
                         </div>
                     </div>
@@ -110,3 +110,39 @@
     }
 </form>
 
+@section Scripts{
+    <script>
+        $(function() {
+                $("#datepicker").datepicker({ minDate: 3, maxDate: "+1W" });
+                $("#timepicker").timepicker({ "minTime": "11:00 AM", "maxTime": "07:00 PM", step: "30" });
+            }
+        );
+
+        function validateInput() {
+            var time = document.getElementById("timepicker").value;
+            var date = document.getElementById("datepicker").value;
+            var name = document.getElementById("txtName").value;
+            var phone = document.getElementById("txtPhone").value;
+
+            if (date.toString() == '') {
+                swal("Error", "Please select pickup date", "error");
+                return false;
+            }
+
+            if (time.toString() == '') {
+                swal("Error", "Please select pickup time", "error");
+                return false;
+            }
+            if (name.toString() == '') {
+                swal("Error", "Please select pickup name", "error");
+                return false;
+            }
+            if (phone.toString() == '') {
+                swal("Error", "Please select pickup phone", "error");
+                return false;
+            }
+
+
+        }
+    </script>
+}
