Addee Stripe Onpost

--- a/Taste/Pages/Customer/Cart/Summary.cshtml
+++ b/Taste/Pages/Customer/Cart/Summary.cshtml
@@ -97,7 +97,7 @@
                                             </li>
                                         }
                                         <li class="list-group-item d-flex justify-content-between bg-light">
-                                            <small class="text-info">Total (USD)</small>
+                                            <small class="text-info">Total</small>
                                             <strong class="text-info">@total.ToString("0.00")</strong>
                                         </li>
                                     </ul>
@@ -121,6 +121,7 @@
                                         data-description ="Defend Your Nation! Buy now pay later"
                                         data-locale="auto"
                                         data-allow-remeber-me="false"
+                                        data-image="#"
                                        
                                 ></script>
                               <script>document.getElementsByClassName("stripe-button-el")[0].style.display='none'</script>
