--- a/Taste/Pages/Admin/Order/OrderList.cshtml
+++ b/Taste/Pages/Admin/Order/OrderList.cshtml
@@ -4,11 +4,11 @@
 }
 
 <div class="border backgroundWhite container">
-    <div class="row">
-        <div class="col-6">
+    <div class="d-flex justify-content-between mb-3">
+        <div class="p-2">
             <h2 class="text-primary">Order's List</h2>
         </div>
-        <div class="col-6 text-right">
+        <div class="p-2">
             <ul class="list-group  list-group-horizontal-sm">
                 <a style="text-decoration: none;">
                     <li class="list-group-item">Cancelled</li>
