added transactionid for stripe payment

--- a/Taste/Pages/Customer/Cart/Index.cshtml
+++ b/Taste/Pages/Customer/Cart/Index.cshtml
@@ -9,7 +9,7 @@
     <br />
    
     @if(Model.OrderDetailsCartVM.listCart.Count > 0){
-        <input asp-for="@Model.OrderDetailsCartVM.listCart[0].ApplicationUserId" hidden="" />
+        <input asp-for="@Model.OrderDetailsCartVM.listCart[0].ApplicationUserId" hidden />
     <div class="backgroundWhiteBorder">
         <div class="container">
             <div class="card">
