--- a/Taste/Pages/Customer/Cart/Summary.cshtml
+++ b/Taste/Pages/Customer/Cart/Summary.cshtml
@@ -73,7 +73,7 @@
                                             <label>Notes</label>
                                         </div>
                                         <div class="col-9">
-                                            <textarea asp-for="@Model.detailCart.OrderHeader.Comments" class="form-control"></textarea>
+                                            <textarea asp-for="@Model.detailCart.OrderHeader.Comments" style="height: 100px" class="form-control"></textarea>
                                         </div>
                                     </div>
 
